<resources>
    <string name="app_name">Сountrypedia</string>
    <string name="search_for_country">Search for country</string>
    <string name="search_by">Search by</string>
    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="alphabet">Alphabet</string>
    <string name="display_by">Display by</string>
    <string name="sort">Sort</string>
    <string name="map">map</string>
</resources>
